--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -2,14 +2,14 @@
   "name": "esDmsSite",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0-rc.2",
+    "angular": "~1.2.0-rc.3",
     "json3": "~3.2.4",
     "jquery": "~2.0.3",
     "bootstrap-sass": "~3.0.0",
     "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.0-rc.2",
-    "angular-cookies": "~1.2.0-rc.2",
-    "angular-sanitize": "~1.2.0-rc.2",
+    "angular-resource": "~1.2.0-rc.3",
+    "angular-cookies": "~1.2.0-rc.3",
+    "angular-sanitize": "~1.2.0-rc.3",
     "angular-http-auth": "git://github.com/qloo/angular-http-auth.git",
     "angular-authentication": "~1.0.4",
     "angular-bootstrap": "~0.6.0",
@@ -17,10 +17,13 @@
     "angular-ui": "~0.4.0",
     "angular-ui-router": "~0.2.0",
     "angular-ui-select2": "~0.0.2",
-    "lodash": "~2.1.0"
+    "lodash": "~2.2.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0-rc.2",
-    "angular-scenario": "~1.2.0-rc.2"
+    "angular-mocks": "~1.2.0-rc.3",
+    "angular-scenario": "~1.2.0-rc.3"
+  },
+  "resolutions": {
+    "angular": "1.2.0-rc.3"
   }
 }
