--- a/activiti/es-dms-activiti-authentication/pom.xml
+++ b/activiti/es-dms-activiti-authentication/pom.xml
@@ -134,6 +134,20 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 		<testResources>
 			<testResource>
 				<directory>${basedir}/src/test/resources</directory>
@@ -143,7 +157,6 @@
 				</includes>
 			</testResource>
 		</testResources>
-
 	</build>
 	<repositories>
 		<repository>
