--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-router": "~0.2.0",
     "angular-ui-select2": "~0.0.2",
     "lodash": "~2.2.1",
-    "font-awesome": "~3.2.1"
+    "font-awesome": "~3.2.1",
+    "ng-tags-input": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0-rc.3",
