--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -16,10 +16,10 @@
     "blueimp-file-upload": "~8.9.0",
     "angular-ui": "~0.4.0",
     "angular-ui-router": "~0.2.0",
-    "angular-ui-select2": "~0.0.2",
     "lodash": "~2.2.1",
     "font-awesome": "~3.2.1",
-    "ng-tags-input": "~0.1.3"
+    "ng-tags-input": "~0.1.3",
+    "angularjs-file-upload": "1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0-rc.3",
