--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -18,7 +18,8 @@
     "lodash": "~2.2.1",
     "font-awesome": "~3.2.1",
     "ng-tags-input": "~0.1.3",
-    "angularjs-file-upload": "1.1.1"
+    "angularjs-file-upload": "1.1.1",
+    "d3": "~3.3.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0-rc.3",
