--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -2,30 +2,27 @@
   "name": "esDmsSite",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0-rc.3",
+    "angular": "~1.2.1",
     "json3": "~3.2.4",
     "jquery": "~2.0.3",
     "bootstrap-sass": "~3.0.0",
     "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.0-rc.3",
-    "angular-cookies": "~1.2.0-rc.3",
-    "angular-sanitize": "~1.2.0-rc.3",
+    "angular-resource": "~1.2.1",
+    "angular-cookies": "~1.2.1",
+    "angular-sanitize": "~1.2.1",
     "angular-http-auth": "git://github.com/qloo/angular-http-auth.git",
     "angular-authentication": "~1.0.4",
     "angular-bootstrap": "~0.6.0",
     "angular-ui": "~0.4.0",
     "angular-ui-router": "~0.2.0",
-    "lodash": "~2.2.1",
+    "lodash": "~2.3.0",
     "font-awesome": "~3.2.1",
     "ng-tags-input": "~0.1.3",
-    "angularjs-file-upload": "1.1.1",
+    "angularjs-file-upload": "~1.1.5",
     "d3": "~3.3.9"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0-rc.3",
-    "angular-scenario": "~1.2.0-rc.3"
-  },
-  "resolutions": {
-    "angular": "1.2.0-rc.3"
+    "angular-mocks": "~1.2.1",
+    "angular-scenario": "~1.2.1"
   }
 }
