--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "angular-mocks": "~1.2.1",
     "angular-scenario": "~1.2.1"
+  },
+  "resolutions": {
+    "angular": "~1.2.1"
   }
 }
